Fix dropdown-menu missing z-index

--- a/src/styles.css
+++ b/src/styles.css
@@ -60,6 +60,7 @@ ul {
   top: 100%;
   left: 0;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  z-index: 1;
 }
 
 .dropdown-menu-1 {
